--- a/styles/packages.css
+++ b/styles/packages.css
@@ -1,5 +1,6 @@
 .package-detail-page-tour-gallery {
     /* background-color: gray; */
+    /* position: relative; */
 }
 
 .hero-section {
@@ -35,7 +36,7 @@
 
 .tour-gallery-container {
     max-width: 1350px;
-    height: 2000px; 
+    height: 1800px; 
     margin: 0px auto;
     transform: translateY(-79px);
     position: relative;
@@ -133,6 +134,7 @@
 
 .ig-footer {
     display: flex;
+    align-items: center;
     gap: 20px;
     margin: 50px auto 0px auto; 
 }
@@ -219,24 +221,34 @@
     width: 176px;
 }
 
+/* images are inside container div */
 .tg-plant {
     position: absolute;
     left: 0px;
-    bottom: 10%;
+    bottom: 0px;
     z-index: -1;
 }
 
 .tg-vacation {
     position: absolute;
     right: 20px;
-    bottom: 17%;
+    bottom: 7.4%;
     z-index: -1;
 }
 
-/* @media (max-width: 1000px) {
-    .tg-image-and-information {
-        flex-wrap: wrap;
-    }
+/* images are inside homepage div */
+/* .tg-plant {
+    position: absolute;
+    left: 5.6%;
+    bottom: 3%;
+    z-index: -1;
+}
+
+.tg-vacation {
+    position: absolute;
+    right: 7.5%;
+    bottom: 8%;
+    z-index: -1;
 } */
 
 @media (max-width: 1050px) {
@@ -251,7 +263,28 @@
 }
 
 @media (max-width: 950px) {
+    .tg-image-and-information {
+        flex-wrap: wrap;
+        padding: 0px 0px;
+    }
+
+    .ig-footer {
+        margin: 25px auto 25px auto; 
+    }
     
+    .ig-footer img {
+        max-width: 50%;
+        max-height: 50%;
+    }
+    
+    .ig-footer p {
+        font-size: 12px;
+        line-height: 24px;
+    }
+
+    .ii-information {
+        margin: 0px auto;
+    }
 }
 
 @media (max-width: 800px) {
