--- a/styles/packages.css
+++ b/styles/packages.css
@@ -366,7 +366,7 @@
         font-size: 90px;
         line-height: 150px;
     }
-    .tg-secondary-nav-bar {
+    .tg-secondary-nav-bar .nav {
         flex-direction: column;
         align-items: center;
     }
