--- a/styles/packages.css
+++ b/styles/packages.css
@@ -1,88 +1,13 @@
 .package-detail-page-tour-gallery {
 }
 
-.hero-section {
-    height: 100vh;
-    background: url("../images/location/tour-location-homepage.png") no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-}
-
-.hes-script {
-    margin: 205px auto;
-    color: rgba(255, 255, 255, 1);
-    text-align: center;
-}
-
-.s-subheading {
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 27px;
-    letter-spacing: 0.1em;
-}
-
-.s-heading {
-    font-family: "Yesteryear", sans-serif;
-    font-size: 157.43px;
-    font-weight: 400;
-    line-height: 223.68px;
-    margin-top: -20px;
-}
-
-.tour-gallery-container {
-    max-width: 1350px;
-    height: 1800px; 
-    margin: 0px auto;
-    transform: translateY(-79px);
-    position: relative;
-    box-shadow: 0px 4px 48px 12px rgba(0, 0, 0, 0.09);
-}
-
-.tg-secondary-nav-bar {
-    background: rgba(248, 248, 248, 1);
-    display: flex;
-    justify-content: space-between;
-}
-
-.tg-secondary-nav-bar .nav {
-    display: flex;
-    align-items: center;
-    flex: 1;
-    padding: 60px;
-    font-family: "Poppins", sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0.1em;
-    cursor: pointer;
-}
-
-.tg-secondary-nav-bar .nav:hover {
-    box-shadow: 0px 4px 48px 12px rgba(0, 0, 0, 0.09);
-}
-
-.tg-secondary-nav-bar .nav img {
-    width: 26px;
-    height: 26px;
-}
-
-.tg-secondary-nav-bar .nav p {
-    padding-left: 15px;
-}
-
-.tg-secondary-nav-bar .gallery {
-    background-color: rgba(255, 255, 255, 1);
-}
-
-.tg-image-and-information {
+.tg-image {
     display:flex;
     margin-top: 40px;
     padding: 0px 40px;
 }
 
-.ii-image-gallery {
+.i-image-gallery {
     display: flex;
     flex-direction: column;
 }
@@ -133,7 +58,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    margin: 50px auto 0px auto; 
+    margin: 50px auto;
 }
 
 .ig-footer img {
@@ -146,177 +71,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-}
-
-.ii-information {
-    width: 481px;
-    height: 977px;
-    margin-left: 30px;
-    padding: 30px 40px;
-    background-color: rgba(237, 237, 237, 1);
-    text-align: center;
-    position: relative;
-}
-
-.i-title {
-    font-family: "Volkhov", sans-serif;
-    font-size: 42px;
-    font-weight: 700;
-    line-height: 54.18px;
-    text-align: center;
-    color: rgba(24, 30, 75, 1);
-}
-
-.i-script {
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: center;
-    margin: 10px auto 20px auto;
-    color: rgba(0, 0, 0, 1);
-}
-
-.ii-information .i-whole-input{
-    position: relative;
-}
-
-.ii-information .i-whole-input img {
-    position: absolute;
-    transform: translate(100%, 180%);
-}
-
-.ii-information .i-whole-input input { 
-    display: inline;
-    border: none;
-    margin-top: 10px;
-    padding: 25px 15px;
-    width: 359px;
-    height: 76px;
-}
-
-::placeholder {
-    color: rgba(0, 0, 0, 0.26);
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    padding-left: 35px;
-}
-
-.ii-information .button {
-    display: block;
-    border: none;
-    margin: 20px auto 0px auto;
-    padding: 16px 10px;
-    font-family: "Poppins", sans-serif;
-    font-size: 16.72px;
-    font-weight: 600;
-    line-height: 25.07px;
-    background-color: rgba(223, 105, 81, 1);
-    color: rgba(255, 255, 255, 1);
-    border-radius: 10px;
-    width: 176px;
-}
-
-
-.tg-plant {
-    position: absolute;
-    left: 0%;
-    bottom: 0%;
-    z-index: -1;
-}
-
-.tg-vacation {
-    position: absolute;
-    right: 20px;
-    bottom: 7.4%;
-    z-index: -1;
-}
-
-@media (max-width: 1050px) {
-    .tg-secondary-nav-bar .nav {
-        padding: 30px;
-        font-size: 16px;
-    }
-    
-    .tg-secondary-nav-bar .nav p {
-        padding-left: 10px;
-    }
-}
-
-@media (max-width: 950px) {
-    .tour-gallery-container {
-        height: 2320px;
-    }
-
-    .tg-image-and-information {
-        flex-wrap: wrap;
-        padding: 0px 20px;
-    }
-
-    .ii-image-gallery {
-        margin: 0 auto;
-    }
-
-    .ig-footer {
-        margin: 25px auto 25px auto; 
-    }
-    
-    .ig-footer img {
-        max-width: 50%;
-        max-height: 50%;
-    }
-    
-    .ig-footer p {
-        font-size: 12px;
-        line-height: 24px;
-    }
-
-    .tg-plant, .tg-vacation {
-        display: none;
-    }
-
-    .ii-information {
-        margin: 0px auto;
-        width: 400px;
-        height: 765px;
-    }
-
-    .i-title {
-        font-size: 28px;
-        line-height: 40px;
-    }
-    
-    .i-script {
-        font-size: 13px;
-        line-height: 22px;
-    }
-
-    .ii-information .i-whole-input input { 
-        width: 300px;
-        height: 50px;
-    }
-
-    .ii-information .i-whole-input img {
-        position: absolute;
-        transform: translate(80%, 120%);
-    }    
-    
-    ::placeholder {
-        font-size: 12px;
-        line-height: 20px;
-    }
-    
-    .ii-information .button {
-        margin: 20px auto 0px auto;
-        padding: 16px 10px;
-        font-size: 12px;
-        line-height: 20px;
-        width: 140px;
-    }
-    
-    
 }
 
 @media (max-width: 800px) {
