[PR-16] - Responsive structure updated.

--- a/styles/about.css
+++ b/styles/about.css
@@ -4,6 +4,7 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 .hes-title-box {
@@ -100,6 +101,7 @@
 
 .wanderlust-video-banner-container {
   position: relative;
+  margin: 75px 0;
 }
 .w-video {
   margin: 0 auto;
@@ -111,8 +113,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: "Yesteryear", cursive;
-  font-size: 100px;
-
+  font-size: clamp(50px, 9vw, 100px);
   font-weight: 400;
   color: #ffff;
 }
@@ -120,7 +121,7 @@
 .about-trend-section {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
+  margin-bottom: 75px;
 }
 .trend-section {
   max-width: 1350px;
@@ -165,15 +166,13 @@
   color: rgba(0, 0, 0, 1);
 }
 .ts-circles {
-  max-width: 155px;
-  max-height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 70px;
 }
 .ts-circles-img {
-  width: 100%;
+  max-width: 100%;
 }
 .ts-circles-paragraph {
   font-family: "Poppins", sans-serif;
@@ -198,7 +197,7 @@
     display: none;
   }
 }
-@media (max-width: 1135px) {
+@media (max-width: 1237px) {
   .trend-section {
     justify-content: center;
   }
@@ -208,7 +207,7 @@
     padding: 50px 20px;
   }
   .ts-circles {
-    display: inline-table;
+    flex-wrap: wrap;
   }
 }
 
