--- a/styles/packages.css
+++ b/styles/packages.css
@@ -85,7 +85,8 @@
     clip-path: inset(0px -48px -48px -48px);
 }
 .package-location-navbar-box {
-    cursor:pointer;
+    position: relative;
+    z-index: 0;
     display: flex;
     flex: 1;
     flex-wrap: wrap;
@@ -95,6 +96,7 @@
 }
 .location-page-box{
     height: 1630px;
+    display: none;
 }
 .package-location-navbar > div > p {
     font-size: 12px;
@@ -112,6 +114,15 @@
     height: 100px;
     text-align: center;
 }
+.location-href {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    z-index: 9;
+  }
 .location-box-h3{
     color: #181e4b;
     font-family: "Volkhov", sans-serif;
@@ -129,6 +140,7 @@
     padding: 30px;
     background: #ededed;
     height: fit-content;
+    flex:0.5;
 }
 .form-box-h2 {
     color: #181e4b;
@@ -287,6 +299,7 @@
 .tp-details-container {
   padding: 40px;
   width: 60%;
+  display: none;
 }
 
 .tp-details-title {
@@ -347,4 +360,8 @@
   .tp-bottom-container {
     flex-direction: column;
   }
+}
+.active{
+    display: block;
+    flex: 1;
 }
