--- a/styles/Packages.css
+++ b/styles/Packages.css
@@ -8,8 +8,9 @@
 .Packages-img-text{
     color: #fff;
     position: absolute;
-    top:40%;
-    left: 40%;
+    top: 40%;
+    right: 0;
+    left: 0;
     text-align: center;
 }
 .explore{
@@ -36,26 +37,31 @@
     justify-content: space-between;
     padding: 50px 100px;
     background-color: #f8f8f8;
+    max-width: 1350px;
 }
 .nav_information{
     display: flex;
     align-items: center;
     gap: 10px;
+    max-width: 337.5px;
 }
 .nav_tourplan{
     display: flex;
     align-items: center;
     gap: 10px;
+    max-width: 337.5px;
 }
 .nav_location{
     display: flex;
     align-items: center;
     gap: 10px;
+    max-width: 337.5px;
 }
 .nav_gallery{
     display: flex;
     align-items: center;
     gap: 10px;
+    max-width: 337.5px;
 }
 .Packages-nav-links:active{
     background-color: darkblue;
@@ -116,31 +122,33 @@
     font-family: "Poppins", sans-serif;
     font-size: clamp(8px, 3vw, 14px);
 }
-.Country-Features{
-    max-width: 750px;
-    display: flex;
-}
 .Type-Of-Service{
-    width: 100%;
-    font-family: "Poppins", sans-serif;
     font-size: clamp(10px, 3vw, 16px);
     line-height: clamp(40px, 5vw, 60px);
+}
+.Type-Of-Service > div{
+    display: flex;
+    max-width: 100%;
+}
+.Type-Of-Service > div > h5{
+    width: 40%;
+    font-family: "Poppins", sans-serif;
     color: #DF6951;
     letter-spacing: 1px;
 }
-.Service-Descripton{
+.Type-Of-Service > div > p{
     max-width: 100%;
     font-family: "Poppins", sans-serif;
-    font-size: clamp(10px, 3vw, 16px);
-    line-height: clamp(40px, 5vw, 60px);
 }
 .Not-Included{
-    display: grid;
-    grid-template-columns: repeat(2, 250px);
+    display: flex;
+    gap: 45px;
+    flex-wrap: nowrap;
 }
 .Included-positive{
-    display: grid;
-    grid-template-columns: repeat(2, 250px);
+    gap: 10px;
+    display: flex;
+    flex-direction: row;
 }
 .From-Our-Gallery{
     max-width: 750px;
@@ -156,6 +164,7 @@
     font-family: "Poppins", sans-serif;
     font-size: clamp(8px, 3vw, 14px);
     color: #000000;
+    margin: 15px 0;
 }
 .Gallery-img{
     display: flex;
@@ -194,10 +203,13 @@ input{
     outline: none;
     width: 100%;
 }
+#message{
+    border: none;
+}
 .Packages-Input > div {
     background-color: #fff;
-    width: 350px;
-    height: 70px;
+    width: 100%;
+    min-height: 70px;
     display: flex;
     align-items: center;
     border: none;
@@ -256,9 +268,16 @@ button{
     }
     .Gallery-img{
         display: grid;
-        grid-template-columns: repeat(2, 250px);
-        grid-template-rows: repeat(3, 250px);
-        padding: 10px;
+        justify-content: center;
+        grid-template-columns: repeat(2, 225px);
+        grid-template-rows: repeat(3, 225px);
+    }
+    .Gallery-img > img{
+        height: 165px;
+    }
+    .Book-This-Tour
+    {
+        max-width: 90%;
     }
  }
  @media (max-width: 500px) {
@@ -266,5 +285,12 @@ button{
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+    .Gallery-img > img{
+        height: 140px;
+    }
+    .Book-This-Tour
+    {
+        max-width: 90%;
     }
  }
