--- a/styles/Packages.css
+++ b/styles/Packages.css
@@ -1,296 +1,286 @@
-.Packages-img{
-    background-image: url("/images/location/tour-location-homepage.png");
-    height: 800px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.Packages-img {
+  background-image: url("/images/location/tour-location-homepage.png");
+  height: 800px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.Packages-img-text{
-    color: #fff;
-    position: absolute;
-    top: 40%;
-    right: 0;
-    left: 0;
-    text-align: center;
+.Packages-img-text {
+  color: #fff;
+  position: absolute;
+  top: 40%;
+  right: 0;
+  left: 0;
+  text-align: center;
 }
-.explore{
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(10px, 5vw, 18px);
-    line-height: clamp(14px, 3vw, 27px);
-    letter-spacing: 0.2em;
+.explore {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(10px, 5vw, 18px);
+  line-height: clamp(14px, 3vw, 27px);
+  letter-spacing: 0.2em;
 }
-.landscape{
-    font-family: "Yesteryear", cursive;
-    font-size: clamp(80px, 5vw, 160px);
-    line-height: clamp(100px, 5vw, 225px);
+.landscape {
+  font-family: "Yesteryear", cursive;
+  font-size: clamp(80px, 5vw, 160px);
+  line-height: clamp(100px, 5vw, 225px);
 }
-.Packages-Body-Container{
-    position: relative;
-    margin: auto;
-    top: -70px;
-    max-width: 1350px;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
-    rgba(0, 0, 0, 0.23) 0px 6px 6px;
+.Packages-Body-Container {
+  position: relative;
+  margin: auto;
+  top: -70px;
+  max-width: 1350px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-.Packages-nav-links{
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 100px;
-    background-color: #f8f8f8;
-    max-width: 1350px;
+.Packages-nav-links {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 100px;
+  background-color: #f8f8f8;
+  max-width: 1350px;
 }
-.nav_information{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    max-width: 337.5px;
+.nav_information {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: 337.5px;
 }
-.nav_tourplan{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    max-width: 337.5px;
+.nav_tourplan {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: 337.5px;
 }
-.nav_location{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    max-width: 337.5px;
+.nav_location {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: 337.5px;
 }
-.nav_gallery{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    max-width: 337.5px;
+.nav_gallery {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: 337.5px;
 }
-.Packages-nav-links:active{
-    background-color: darkblue;
+.Packages-nav-links:active {
+  background-color: darkblue;
 }
-.Packages-Information{
-    position: relative;
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
+.Packages-Information {
+  position: relative;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
 }
-.Packages-Information-About{
-    max-width: 800px;
-    padding: 15px 5px 10px 20px;
+.Packages-Information-About {
+  max-width: 800px;
+  padding: 15px 5px 10px 20px;
 }
-.About-Country{
-    display: flex;
-    max-width: 750px;
-    gap: 40px;
-    padding-top: 50px;
+.About-Country {
+  display: flex;
+  max-width: 750px;
+  gap: 40px;
+  padding-top: 50px;
 }
-.Country-Tittle-Design{
-    font-family: "Volkhov", serif;
-    font-size: clamp(24px, 5vw, 32px);
-    line-height: 41px;
-    color: #181E4B;
+.Country-Tittle-Design {
+  font-family: "Volkhov", serif;
+  font-size: clamp(24px, 5vw, 32px);
+  line-height: 41px;
+  color: #181e4b;
 }
-.Country-fee{
-    display: flex;
-    align-items: center;
-    gap: 5px;
+.Country-fee {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
-.price{
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(20px, 5vw, 30px);
-    color: #DF6951;
+.price {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(20px, 5vw, 30px);
+  color: #df6951;
 }
-.slash{
-    color: #7D7D7D;
+.slash {
+  color: #7d7d7d;
 }
-.faded{
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(12px, 3vw, 16px);
-    color: #7D7D7D;
+.faded {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(12px, 3vw, 16px);
+  color: #7d7d7d;
 }
-.country-star{
-    display: flex;
-    max-width: 750px;
-    gap: 20px;
+.country-star {
+  display: flex;
+  max-width: 750px;
+  gap: 20px;
 }
-.review-design{
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(12px, 3vw, 16px);
-    color: #5E6282;
+.review-design {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(12px, 3vw, 16px);
+  color: #5e6282;
 }
-.Country-explanation{
-    max-width: 750px;
-    padding: 30px 0;
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(8px, 3vw, 14px);
+.Country-explanation {
+  max-width: 750px;
+  padding: 30px 0;
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(8px, 3vw, 14px);
 }
-.Type-Of-Service{
-    font-size: clamp(10px, 3vw, 16px);
-    line-height: clamp(40px, 5vw, 60px);
+.Type-Of-Service {
+  font-size: clamp(10px, 3vw, 16px);
+  line-height: clamp(40px, 5vw, 60px);
 }
-.Type-Of-Service > div{
-    display: flex;
-    max-width: 100%;
+.Type-Of-Service > div {
+  display: flex;
+  max-width: 100%;
 }
-.Type-Of-Service > div > h5{
-    width: 40%;
-    font-family: "Poppins", sans-serif;
-    color: #DF6951;
-    letter-spacing: 1px;
+.Type-Of-Service > div > h5 {
+  width: 40%;
+  font-family: "Poppins", sans-serif;
+  color: #df6951;
+  letter-spacing: 1px;
 }
-.Type-Of-Service > div > p{
-    max-width: 100%;
-    font-family: "Poppins", sans-serif;
+.Type-Of-Service > div > p {
+  max-width: 100%;
+  font-family: "Poppins", sans-serif;
 }
-.Not-Included{
-    display: flex;
-    gap: 45px;
-    flex-wrap: nowrap;
+.Not-Included {
+  display: flex;
+  gap: 45px;
+  flex-wrap: nowrap;
 }
-.Included-positive{
-    gap: 10px;
-    display: flex;
-    flex-direction: row;
+.Included-positive {
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
 }
-.From-Our-Gallery{
-    max-width: 750px;
-    position: relative;
-    z-index: 1;
+.From-Our-Gallery {
+  max-width: 750px;
+  position: relative;
+  z-index: 1;
 }
-.Gallery-tittle-style{
-    font-family: "Volkhov", serif;
-    font-size: clamp(30px, 5vw, 50px);
-    color: #181E4B;
+.Gallery-tittle-style {
+  font-family: "Volkhov", serif;
+  font-size: clamp(30px, 5vw, 50px);
+  color: #181e4b;
 }
-.Gallery-paragraph{
-    font-family: "Poppins", sans-serif;
-    font-size: clamp(8px, 3vw, 14px);
-    color: #000000;
-    margin: 15px 0;
+.Gallery-paragraph {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(8px, 3vw, 14px);
+  color: #000000;
+  margin: 15px 0;
 }
-.Gallery-img{
-    display: flex;
-    max-width: 750px;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
+.Gallery-img {
+  display: flex;
+  max-width: 750px;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
-.Book-This-Tour{
-    max-width: 500px;
-    margin: 25px;
-    background-color: #EDEDED;
-    text-align: center;
-    height: fit-content;
+.Book-This-Tour {
+  max-width: 500px;
+  margin: 25px;
+  background-color: #ededed;
+  text-align: center;
+  height: fit-content;
 }
-.Book-tittle{
-    padding: 20px;
-    font-family: "Volkhov", serif;
-    font-size: 30px;
-    color: #181E48;
+.Book-tittle {
+  padding: 20px;
+  font-family: "Volkhov", serif;
+  font-size: 30px;
+  color: #181e48;
 }
-.book-paragraph{
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
+.book-paragraph {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
 .Packages-Input {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    justify-content: center;
-    padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  padding: 30px;
 }
-input{
-    border: none;
-    outline: none;
-    width: 100%;
+input {
+  border: none;
+  outline: none;
+  width: 100%;
 }
-#message{
-    border: none;
+#message {
+  border: none;
 }
 .Packages-Input > div {
-    background-color: #fff;
-    width: 100%;
-    min-height: 70px;
+  background-color: #fff;
+  width: 100%;
+  min-height: 70px;
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 0 15px;
+  gap: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+}
+button {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  height: 50px;
+  width: 150px;
+  background-color: #df6951;
+  border-radius: 10px;
+  border: none;
+  color: #fff;
+  margin: 5px;
+}
+.BTT-img {
+  position: absolute;
+  right: 0;
+  z-index: -1;
+  bottom: 10%;
+}
+@media (max-width: 1345px) {
+  .Book-This-Tour {
+    max-width: 100%;
+    justify-content: center;
+  }
+  .Packages-Input {
+    max-width: 100%;
+  }
+  .BTT-img {
+    display: none;
+  }
+}
+@media (max-width: 850px) {
+  .nav_information {
+    flex-direction: column;
+  }
+  .nav_tourplan {
+    flex-direction: column;
+  }
+  .nav_location {
+    flex-direction: column;
+  }
+  .nav_gallery {
+    flex-direction: column;
+  }
+}
+@media (max-width: 770px) {
+  .Packages-nav-links {
+    padding: 25px 25px;
+  }
+  .Gallery-img > img {
+    height: 165px;
+  }
+  .Book-This-Tour {
+    max-width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .Gallery-img {
     display: flex;
-    align-items: center;
-    border: none;
-    padding: 0 15px;
-    gap: 10px;
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    line-height: 26px;
+    justify-content: center;
+  }
+  .Gallery-img > img {
+    height: 140px;
+  }
+  .Book-This-Tour {
+    max-width: 90%;
+  }
 }
-button{
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    height: 50px;
-    width: 150px;
-    background-color: #DF6951;
-    border-radius: 10px;
-    border: none;
-    color: #fff;
-    margin: 5px;
-}
-.BTT-img{
-    position: absolute;
-    right: 0;
-    z-index: -1;
-    bottom: 10%;
- }
- @media (max-width:1345px){
-    .Book-This-Tour{
-        max-width: 100%;
-        justify-content: center;
-    }
-    .Packages-Input{
-        max-width: 100%;
-    }
-    .BTT-img{
-        display: none;
-    }
-}
- @media (max-width:850px) {
-    .nav_information{
-        flex-direction: column;
-    }
-    .nav_tourplan{
-        flex-direction: column;
-    }
-    .nav_location{
-      flex-direction: column;
-    }
-    .nav_gallery{
-        flex-direction: column;
-    }
- }
- @media (max-width:770px) {
-    .Packages-nav-links{
-        padding: 25px 25px;
-    }
-    .Gallery-img{
-        display: grid;
-        justify-content: center;
-        grid-template-columns: repeat(2, 225px);
-        grid-template-rows: repeat(3, 225px);
-    }
-    .Gallery-img > img{
-        height: 165px;
-    }
-    .Book-This-Tour
-    {
-        max-width: 90%;
-    }
- }
- @media (max-width: 500px) {
-    .Gallery-img{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .Gallery-img > img{
-        height: 140px;
-    }
-    .Book-This-Tour
-    {
-        max-width: 90%;
-    }
- }
